# lark-designer-client

./: .buildpacks  README.md  index.html  package-lock.json  package.json  static.json  vite.config.ts  vue.config.js
.github/workflows/: main.yml
client/: README.md  package-lock.json  package.json  vue.config.js
client/public/: index.html
client/src/: App.vue
client/src/components/: TreeNode.vue
public/: index.html
sample_data/: abnf.lark
server/: pyproject.toml
server/src/lark-designer-server/: app.py
server/src/lark_designer_server/: transformer.py
src/: App.css  App.js  App.tsx  App.vue  index.js  main.js  main.tsx  setupProxy.js
src/components/: LineAwesomeIcon.vue
