[tool.poetry]
name = "lark-designer-server"
version = "0.1.0"
description = ""
authors = ["Gary DeReese <garydereese@sbcglobal.net>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-Cors = "^3.0.10"
lark = "^0.11.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
